# osp_robot_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch.py
meshes/: base_link.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL  wheel_4.STL
rviz/: Assem1.rviz
urdf/: Assem1.csv  Assem1.urdf
